# editbench

./: .gitignore  EditBench.config  README.md  display_results_csv.py  entrypoint.sh  pyproject.toml  run_experiment.sh
edit_bench/: __init__.py  evaluation.py
examples/: generate_and_run_experiment.py  run_experiment.py
prompts/: cursor_position.txt  highlight_edits_only.txt  no_highlight.txt  whole_file.txt  whole_file_r1.txt
results/whole_file/: claude-3.5-sonnet.json  claude-3.7-sonnet.json  claude-sonnet-4.5.json  claude-sonnet-4.json  deepseek-chat-v3.1.json  deepseek-r1-0528.json  devstral-medium.json  devstral-small.json  gemini-2.5-flash.json  gemini-2.5-pro.json  gemma-3-12b-it.json  gemma-3-27b-it.json  gemma-3n-e4b-it.json  glm-4.5.json  glm-4.6.json  gpt-4o-mini.json  gpt-4o.json  gpt-5-high.json  gpt-5-mini.json  gpt-5-nano.json  gpt-5.json  gpt-o3-mini-high.json  gpt-o3-mini.json  gpt-o4-mini-high.json  gpt-o4-mini.json  gpt-oss-120b.json  gpt-oss-20b.json  grok-4-fast.json  grok-code-fast-1.json  kimi-dev-72b.json  kimi-k2-0905.json  llama-3.1-405b-instruct.json  llama-3.1-8b-instruct.json  llama-3.3-70b-instruct.json  llama-4-maverick.json  llama-4-scout.json  mistral-small-3.2-24b-instruct.json  mistralai-codestral-2508.json  qwen-2.5-72b-instruct.json  qwen-2.5-coder-32b-instruct.json  (+4 more)
